# libtrainsim

./: .clang-format  .gitignore  .gitlab-ci.yml  Doxyfile  README.md  meson.build  meson_options.txt  sonar-project.properties
.github/workflows/: main.yaml
control/: meson.build
control/include/: control.hpp  glfwKeyTranslation.hpp  inputHandler.hpp  keymap.hpp  rs232.c  serialcontrol.hpp
control/include/pch/: libtrainsim_control_pch.hpp
control/src/: control.cpp  glfwKeyTranslation.cpp  inputHandler.cpp  keymap.cpp  serialcontrol.cpp
core/: meson.build
core/include/: clampedVariable.hpp  core.hpp  format.hpp  helper.hpp  input_axis.hpp  simulator_config.hpp  track_configuration.hpp  track_data.hpp  train_properties.hpp  types.hpp  version.hpp
core/include/pch/: libtrainsim_core_pch.hpp
core/src/: format.cpp  helper.cpp  input_axis.cpp  simulator_config.cpp  track_configuration.cpp  track_data.cpp  train_properties.cpp  types.cpp  version.cpp
core/tests/: getNearestFrame.cpp  hello.cpp  helper.cpp  input-axis.cpp  load_track.cpp  meson.build  test_train_data_1.json  track_data.cpp  train_properties.cpp  version.cpp
core/tests/data/: db433.json  test_train_data_1.json  test_train_data_2.json  u6Muenchen.json
core/tests/pch/: libtrainsim_core_test_pch.hpp
docs/: DataER.drawio  ReleaseNotes.md  config.json  json_formats.md  physics_deu.md  serial_config_format.md  simulator_configuration_format.md  stops_data_format.md  track_data_format.md  track_definition.md  train_properties_format.md  ubahntypenMuenchen.md
extras/: meson.build
extras/snowFx/: meson.build
extras/snowFx/include/: snowFx.hpp  wiper.hpp
extras/snowFx/src/: snowFx.cpp  wiper.cpp
extras/statusDisplay/: meson.build
extras/statusDisplay/include/: statusDisplay.hpp  statusDisplayGraph.hpp
extras/statusDisplay/src/: statusDisplay.cpp
physics/: meson.build
physics/include/: physics.hpp
physics/src/: physics.cpp
subprojects/: ffmpeg.wrap  imgui.wrap  libvlcpp.wrap  nativefiledialog-extended.wrap  rs232.wrap  sdl2.wrap  simplegfx.wrap  simplegl.wrap  unit-system.wrap
subprojects/packagefiles/: libvlcpp_meson.patch
testdata/core/: test_track_data.json  test_train_data_1.json  test_train_data_2.json
video/: meson.build
video/include/: VideoBackends.hpp  defaultShader.hpp  dimensions.hpp  frame.hpp  generic.hpp  genericBackend.hpp  genericRenderer.hpp  genericWindowManager.hpp  imguiHandler.hpp  outputWindow.hpp  outputWindowTypes.hpp  popup.hpp  shader.hpp  simulatorRenderWidget.hpp  statusDisplay.hpp  tabPage.hpp  texture.hpp  video.hpp  videoDecoder.hpp  videoReader.hpp  videoReaderSim.hpp  video_reader.hpp  video_settings.hpp  window.hpp
video/include/backends/: SDL2WindowManager.hpp  ffmpegFrame.hpp  ffmpegRenderer.hpp  ffmpeg_glfw3.hpp  ffmpeg_sdl.hpp  generic.hpp  glfw3WindowManager.hpp  openCVRenderer.hpp  openCVWindowManager.hpp  opencv.hpp
video/include/defaultShaderSources/: basic.vert  copy.frag  displacement.frag  draw.frag
video/include/glad/: glad.h
video/include/pch/: libtrainsim_video_pch.hpp
video/include/renderWidget/: displayFragShader.hpp  renderWidgetBase.hpp  renderWidgetGL.hpp  renderWidgetPicture.hpp
video/include/videoDecode/: videoDecoderBase.hpp  videoDecoderGstreamer.hpp  videoDecoderLibav.hpp  videoDecoderVlc.hpp  videoReader.hpp
video/src/: VideoBackends.cpp  defaultShader.cpp  dimensions.cpp  displayFragShader.cpp  frame.cpp  generic.cpp  genericBackend.cpp  genericRenderer.cpp  genericWindowManager.cpp  glad.c  imguiHandler.cpp  outputWindow.cpp  popup.cpp  shader.cpp  simulatorRenderWidget.cpp  statusDisplay.cpp  tabPage.cpp  texture.cpp  video.cpp  videoDecoder.cpp  videoReader.cpp  videoReaderSim.cpp  video_reader.cpp  video_settings.cpp  window.cpp
video/src/backends/: SDL2WindowManager.cpp  ffmpegFrame.cpp  ffmpegRenderer.cpp  ffmpegSDL2Backend.cpp  ffmpeg_glfw3.cpp  glfw3WindowManager.cpp  openCVBackend.cpp  openCVFrame.cpp  openCVRenderer.cpp  openCVWindowManager.cpp
video/src/ffmpeg/: backend.cpp  frame.cpp
video/src/opencv/: backend.cpp  frame.cpp  video.cpp
video/src/renderWidget/: displayFragShader.cpp  renderWidgetBase.cpp  renderWidgetGL.cpp  renderWidgetPicture.cpp
video/src/videoDecode/: videoDecoderBase.cpp  videoDecoderGstreamer.cpp  videoDecoderLibav.cpp  videoDecoderVlc.cpp  videoReader.cpp
video/tests/: hello.cpp  meson.build
